--- a/package.json
+++ b/package.json
@@ -6,10 +6,37 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@truffle/hdwallet-provider": "^1.4.0",
+    "apexcharts": "^3.26.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "bootstrap": "^5.0.1",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^3.0.0",
+    "dotenv": "^10.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "openzeppelin-solidity": "^4.1.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
+    "solidity-coverage": "^0.7.16",
+    "truffle": "^5.3.7",
+    "truffle-flattener": "^1.5.0",
+    "truffle-hdwallet-provider-privkey": "^0.3.0",
+    "web-vitals": "^1.1.2",
+    "web3": "^1.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
