--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "solidity-coverage": "^0.7.16",
     "truffle": "^5.3.7",
